# app/Models/User.php
@@ -8,6 +8,19 @@ use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 
+
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     title="User",
+ *     description="Modelo de um User",
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="Daniel Alves"),
+ *     @OA\Property(property="email", type="string", example="daniel@gmail.com"),
+ *     @OA\Property(property="password", type="string", example="daniel123456"),
+ * )
+ */
+
 class User extends Authenticatable
 {
     /** @use HasFactory<\Database\Factories\UserFactory> */
